Logtalk/examples/errors/warnings.loader

:- initialization(
	logtalk_load(
		[misspell, singletons1, plredef, lgtredef, unknownrefs],
		[unknown(warning), misspelt(warning), singletons(warning), plredef(warning), lgtredef(warning), report(on)])).
